--- a/src/404.html
+++ b/src/404.html
@@ -314,7 +314,7 @@
 	<!--Map-->
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAnFqiG7GVEuZZeE5XCILGj1Tqz1KOMye8&sensor=false&extension=.js&language=ru"></script>
 	<script src="js/jquery.min.js"></script>
-	<script src="js/libs.min.js"></script>
+	<script src="js/libs.js"></script>
 	<script src="js/common.js"></script>
 </body>
 
