--- a/src/__automatic-catalog.html
+++ b/src/__automatic-catalog.html
@@ -5,7 +5,7 @@
 
 <!--HEADER-->
 @@include('_layout_header--ea.tpl', {
-	"mainNavItemActive": "Заказ"
+	"mainNavItemActive": "Производство"
 })
 <!--HEADER end-->
 
