--- a/src/automatic-catalog.html
+++ b/src/automatic-catalog.html
@@ -123,17 +123,17 @@
 							<ul class="nav__list nav-js">
 								<!--nav item start-->
 								<li class="">
-									<a href="#"><span>О компании</span></a>
+									<a href="typography.html"><span>О компании</span></a>
+								</li>
+								<!--nav item end-->
+								<!--nav item start-->
+								<li class="current">
+									<a href="automatic-catalog.html"><span>Производство</span></a>
 								</li>
 								<!--nav item end-->
 								<!--nav item start-->
 								<li class="">
-									<a href="#"><span>Производство</span></a>
-								</li>
-								<!--nav item end-->
-								<!--nav item start-->
-								<li class="">
-									<a href="#"><span>Монтажные работы</span></a>
+									<a href="automatic-products.html"><span>Монтажные работы</span></a>
 								</li>
 								<!--nav item end-->
 								<!--nav item start-->
@@ -142,7 +142,7 @@
 								</li>
 								<!--nav item end-->
 								<!--nav item start-->
-								<li class="current">
+								<li class="">
 									<a href="#"><span>Заказ</span></a>
 								</li>
 								<!--nav item end-->
