--- a/src/automatic-products.html
+++ b/src/automatic-products.html
@@ -123,17 +123,17 @@
 							<ul class="nav__list nav-js">
 								<!--nav item start-->
 								<li class="">
-									<a href="#"><span>О компании</span></a>
+									<a href="typography.html"><span>О компании</span></a>
 								</li>
 								<!--nav item end-->
 								<!--nav item start-->
 								<li class="">
-									<a href="#"><span>Производство</span></a>
+									<a href="automatic-catalog.html"><span>Производство</span></a>
 								</li>
 								<!--nav item end-->
 								<!--nav item start-->
-								<li class="">
-									<a href="#"><span>Монтажные работы</span></a>
+								<li class="current">
+									<a href="automatic-products.html"><span>Монтажные работы</span></a>
 								</li>
 								<!--nav item end-->
 								<!--nav item start-->
@@ -142,7 +142,7 @@
 								</li>
 								<!--nav item end-->
 								<!--nav item start-->
-								<li class="current">
+								<li class="">
 									<a href="#"><span>Заказ</span></a>
 								</li>
 								<!--nav item end-->
@@ -266,12 +266,217 @@
 								</div>
 								<!--breadcrumbs end-->
 								<h1>2Кабель силовой бронированный АВБбШв и ААБл</h1>
-								<!--view switcher-->
-								<div class="view-switcher view-switcher-js">
-									<a href="#" class="grid-view" data-title="Показать товары плиткой"><span>Плиткой</span></a>
-									<a href="#" class="list-view active" data-title="Показать товары списком"><span>Списком</span></a>
+								<!--filters-->
+								<div class="p-filters">
+									<div class="p-filters__list">
+										<div class="p-filters__item">
+											<div class="p-filters__inner">
+												<div class="p-filters-select">
+													<div class="p-filters-select-head">
+														<div class="p-filters__group">Производитель</div>
+														<div class="p-filters__placeholder">Выбрать производителя</div>
+													</div>
+													<div class="p-filters-angle"><i>&nbsp;</i></div>
+													<div class="p-filters-select-menu">
+														<ul class="p-filters-select-menu__list">
+															<li>
+																<label class="check-label">
+									<input type="checkbox" name="checkbox-normal" />
+									<span><i>&nbsp;</i>Отличный способ для выделения самого важного в тексте – использование контрастных шрифтов</span>
+								</label>
+															</li>
+															<li>
+																<label class="check-label">
+									<input type="checkbox" name="checkbox-checked" checked />
+									<span><i>&nbsp;</i>Checked</span>
+								</label>
+															</li>
+															<li>
+																<label class="check-label">
+									<input type="checkbox" name="checkbox-disabled" disabled />
+									<span><i>&nbsp;</i>Disabled</span>
+								</label>
+															</li>
+															<li>
+																<label class="check-label">
+									<input type="checkbox" name="checkbox-checked-disabled" checked disabled />
+									<span><i>&nbsp;</i>Checked & Disabled</span>
+								</label>
+															</li>
+														</ul>
+													</div>
+												</div>
+											</div>
+										</div>
+										<div class="p-filters__item">
+											<div class="p-filters__inner">
+												<div class="p-filters-select">
+													<div class="p-filters-select-head">
+														<div class="p-filters__group">Стоимотсь</div>
+														<div class="p-filters__placeholder">80 р. — 150 р.</div>
+													</div>
+													<div class="p-filters-angle"><i>&nbsp;</i></div>
+													<div class="p-filters-select-menu">
+														<ul class="p-filters-select-menu__list">
+															<li>
+																<label class="check-label">
+									<input type="checkbox" name="checkbox-normal" />
+									<span><i>&nbsp;</i>Отличный способ для выделения самого важного в тексте – использование контрастных шрифтов</span>
+								</label>
+															</li>
+															<li>
+																<label class="check-label">
+									<input type="checkbox" name="checkbox-checked" checked />
+									<span><i>&nbsp;</i>Checked</span>
+								</label>
+															</li>
+															<li>
+																<label class="check-label">
+									<input type="checkbox" name="checkbox-disabled" disabled />
+									<span><i>&nbsp;</i>Disabled</span>
+								</label>
+															</li>
+															<li>
+																<label class="check-label">
+									<input type="checkbox" name="checkbox-checked-disabled" checked disabled />
+									<span><i>&nbsp;</i>Checked & Disabled</span>
+								</label>
+															</li>
+														</ul>
+													</div>
+												</div>
+											</div>
+										</div>
+										<div class="p-filters__item">
+											<div class="p-filters__inner">
+												<div class="p-filters-select">
+													<div class="p-filters-select-head">
+														<div class="p-filters__group">Производитель</div>
+														<div class="p-filters__placeholder">Выбрать производителя</div>
+													</div>
+													<div class="p-filters-angle"><i>&nbsp;</i></div>
+													<div class="p-filters-select-menu">
+														<ul class="p-filters-select-menu__list">
+															<li>
+																<label class="check-label">
+									<input type="checkbox" name="checkbox-normal" />
+									<span><i>&nbsp;</i>Отличный способ для выделения самого важного в тексте – использование контрастных шрифтов</span>
+								</label>
+															</li>
+															<li>
+																<label class="check-label">
+									<input type="checkbox" name="checkbox-checked" checked />
+									<span><i>&nbsp;</i>Checked</span>
+								</label>
+															</li>
+															<li>
+																<label class="check-label">
+									<input type="checkbox" name="checkbox-disabled" disabled />
+									<span><i>&nbsp;</i>Disabled</span>
+								</label>
+															</li>
+															<li>
+																<label class="check-label">
+									<input type="checkbox" name="checkbox-checked-disabled" checked disabled />
+									<span><i>&nbsp;</i>Checked & Disabled</span>
+								</label>
+															</li>
+														</ul>
+													</div>
+												</div>
+											</div>
+										</div>
+										<div class="p-filters__item">
+											<div class="p-filters__inner">
+												<div class="p-filters-select">
+													<div class="p-filters-select-head">
+														<div class="p-filters__group">Тип</div>
+														<div class="p-filters__placeholder">патроны. светильники, лампочки, горелки, лампы дневного света, светодиоды</div>
+													</div>
+													<div class="p-filters-angle"><i>&nbsp;</i></div>
+													<div class="p-filters-select-menu">
+														<ul class="p-filters-select-menu__list">
+															<li>
+																<label class="check-label">
+									<input type="checkbox" name="checkbox-normal" />
+									<span><i>&nbsp;</i>Отличный способ для выделения самого важного в тексте – использование контрастных шрифтов</span>
+								</label>
+															</li>
+															<li>
+																<label class="check-label">
+									<input type="checkbox" name="checkbox-checked" checked />
+									<span><i>&nbsp;</i>Checked</span>
+								</label>
+															</li>
+															<li>
+																<label class="check-label">
+									<input type="checkbox" name="checkbox-disabled" disabled />
+									<span><i>&nbsp;</i>Disabled</span>
+								</label>
+															</li>
+															<li>
+																<label class="check-label">
+									<input type="checkbox" name="checkbox-checked-disabled" checked disabled />
+									<span><i>&nbsp;</i>Checked & Disabled</span>
+								</label>
+															</li>
+														</ul>
+													</div>
+												</div>
+											</div>
+										</div>
+										<div class="p-filters__item">
+											<div class="p-filters__inner">
+												<a href="#" class="btn-clear btn-clear-filters-js"> <i>
+					<svg xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 543.9 599.9" enable-background="new 0 0 543.9 599.9">
+<path d="M291,0c2.6,2.4,5.4,4.8,7.9,7.4c30.7,31,61.5,62,92.2,93c6.5,6.6,6.5,11.2-0.1,17.8c-31.3,31.3-62.7,62.7-94,94  c-1.8,1.8-4,3.8-6.4,4.6c-6.4,2.1-11.8-2.3-11.9-9.4c-0.1-17-0.1-34-0.1-51c0-2,0-3.9,0-6.8c-9.8,0.5-19,0.6-28.2,1.5  c-29.7,3-57.6,11.7-82.5,28.6c-37,25-59.6,59.8-69,103.1c-9.6,44.2-6.7,87.5,13,128.6c23.8,49.9,64.1,79.3,117.6,90.5  c42.3,8.8,83.9,5.8,123.5-12.5c51.2-23.7,81.3-64.5,92.7-119.2c2.8-13.4,3.7-27.4,4.1-41.1c0.8-25.8,18.8-45.6,44.5-47.7  c22.9-1.9,44,15,48.7,39.1c0.1,0.6,0.6,1.1,0.9,1.7c0,6.3,0,12.7,0,19c-0.3,1.8-0.7,3.5-0.9,5.3c-2.2,13.9-3.3,28.1-6.8,41.7  C520,452.5,484,504.2,431.4,544.4c-34.9,26.7-73.9,44.3-117.4,51.7c-9,1.5-18,2.5-27.1,3.8c-10,0-20,0-30,0  c-1.1-0.3-2.2-0.7-3.3-0.8c-14.1-2.3-28.4-3.4-42.2-6.9c-67.7-17.3-121-55.9-161.5-112.4c-25-34.9-41-73.5-47.1-116.2  c-1-7.2-1.9-14.4-2.8-21.6c0-9,0-18,0-27c0.3-1.6,0.7-3.2,0.9-4.8c2.2-14.1,3.2-28.5,6.9-42.2c24.7-90.8,81.3-154.4,167.1-192  c32.7-14.3,67.3-20.3,103.7-19.7c0-1.9,0-3.6,0-5.4c0-12.5,0.2-25-0.1-37.5C278.4,7.5,279.8,3,285,0C287,0,289,0,291,0z"/>
+</svg>
+				</i>
+													<span>Сбросить все</span></a>
+											</div>
+										</div>
+									</div>
 								</div>
-								<!--view switcher end-->
+								<!--filters end-->
+								<!--options panel-->
+								<div class="p-options">
+									<div class="p-options__list">
+										<div class="p-options__item">
+											<div class="p-options__inner">
+												<span class="found-items-js">Найдено 3 товара</span>
+											</div>
+										</div>
+										<div class="p-options__item">
+											<div class="p-options__inner">
+												<div class="p-options__group sorting-js order-asc">
+													<small>Сортировать:</small>
+													<ul class="p-sorting sorting-thumbs-js">
+														<li class="active"><span>По цене</span><i class="arr">&nbsp;</i></li>
+														<li class=""><span>По акции</span><i class="arr">&nbsp;</i></li>
+													</ul>
+													<select name="sort">
+						<option value="1" selected="selected">Сортировка по возрастанию</option>
+						<option value="2">Цена по возрастанию</option>
+						<option value="3">Цена по убыванию</option>
+						<option value="4">Сначала акции</option>
+						<option value="5">Акции вконце</option>
+					</select>
+												</div>
+											</div>
+										</div>
+										<div class="p-options__item">
+											<div class="p-options__inner">
+												<!--view switcher-->
+												<div class="view-switcher view-switcher-js">
+													<a href="#" class="list-view active" data-title="Показать товары списком"><span>Списком</span></a>
+													<a href="#" class="grid-view" data-title="Показать товары плиткой"><span>Плиткой</span></a>
+												</div>
+												<!--view switcher end-->
+											</div>
+										</div>
+									</div>
+								</div>
+								<!--options panel end-->
 								<div class="layout-wide">
 									<!--products-->
 									<div class="products view-container-js">
@@ -301,7 +506,7 @@
 																<span>В корзину</span>
 															</div>
 															<div class="spinner">
-																<input class="spinner-js" type="text" name="value" value="1" pattern="\d">
+																<input class="spinner-js" type="text" name="value" value="1" data-only-number>
 																<div class="remove-from-cart"><i>&nbsp;</i><span>Удалить с корзины</span></div>
 															</div>
 														</div>
@@ -333,7 +538,7 @@
 																<span>В корзину</span>
 															</div>
 															<div class="spinner">
-																<input class="spinner-js" type="text" name="value" value="1" pattern="\d">
+																<input class="spinner-js" type="text" name="value" value="1" data-only-number>
 																<div class="remove-from-cart"><i>&nbsp;</i><span>Удалить с корзины</span></div>
 															</div>
 														</div>
@@ -365,7 +570,7 @@
 																<span>В корзину</span>
 															</div>
 															<div class="spinner">
-																<input class="spinner-js" type="text" name="value" value="1" pattern="\d">
+																<input class="spinner-js" type="text" name="value" value="1" data-only-number>
 																<div class="remove-from-cart"><i>&nbsp;</i><span>Удалить с корзины</span></div>
 															</div>
 														</div>
@@ -397,7 +602,7 @@
 																<span>В корзину</span>
 															</div>
 															<div class="spinner">
-																<input class="spinner-js" type="text" name="value" value="1" pattern="\d">
+																<input class="spinner-js" type="text" name="value" value="1" data-only-number>
 																<div class="remove-from-cart"><i>&nbsp;</i><span>Удалить с корзины</span></div>
 															</div>
 														</div>
@@ -419,8 +624,8 @@
 													</div>
 													<div class="products__footer">
 														<div class="products__price">
-															<div class="cur">1 300 руб.</div>
-															<div class="old">1 600 руб.</div>
+															<div class="cur">1 577 300 руб.</div>
+															<div class="old">1 600 000 руб.</div>
 														</div>
 														<div class="products__options">
 															<div class="btn-outline btn-with-icon" data-href="#">
@@ -430,7 +635,7 @@
 																<span>В корзину</span>
 															</div>
 															<div class="spinner">
-																<input class="spinner-js" type="text" name="value" value="1" pattern="\d">
+																<input class="spinner-js" type="text" name="value" value="1" data-only-number>
 																<div class="remove-from-cart"><i>&nbsp;</i><span>Удалить с корзины</span></div>
 															</div>
 														</div>
@@ -463,7 +668,7 @@
 																<span>В корзину</span>
 															</div>
 															<div class="spinner">
-																<input class="spinner-js" type="text" name="value" value="1" pattern="\d">
+																<input class="spinner-js" type="text" name="value" value="1" data-only-number>
 																<div class="remove-from-cart"><i>&nbsp;</i><span>Удалить с корзины</span></div>
 															</div>
 														</div>
@@ -495,7 +700,7 @@
 																<span>В корзину</span>
 															</div>
 															<div class="spinner">
-																<input class="spinner-js" type="text" name="value" value="1" pattern="\d">
+																<input class="spinner-js" type="text" name="value" value="1" data-only-number>
 																<div class="remove-from-cart"><i>&nbsp;</i><span>Удалить с корзины</span></div>
 															</div>
 														</div>
@@ -528,7 +733,7 @@
 																<span>В корзину</span>
 															</div>
 															<div class="spinner">
-																<input class="spinner-js" type="text" name="value" value="1" pattern="\d">
+																<input class="spinner-js" type="text" name="value" value="1" data-only-number>
 																<div class="remove-from-cart"><i>&nbsp;</i><span>Удалить с корзины</span></div>
 															</div>
 														</div>
@@ -561,7 +766,7 @@
 																<span>В корзину</span>
 															</div>
 															<div class="spinner">
-																<input class="spinner-js" type="text" name="value" value="1" pattern="\d">
+																<input class="spinner-js" type="text" name="value" value="1" data-only-number>
 																<div class="remove-from-cart"><i>&nbsp;</i><span>Удалить с корзины</span></div>
 															</div>
 														</div>
