--- a/src/404.html
+++ b/src/404.html
@@ -140,7 +140,7 @@
 									<!--nav item end-->
 									<!--nav item start-->
 									<li class="">
-										<a href="#"><span>Сотрудничество</span></a>
+										<a href="automatic-card.html"><span>Сотрудничество</span></a>
 									</li>
 									<!--nav item end-->
 									<!--nav item start-->
