--- a/src/__automatic-catalog.html
+++ b/src/__automatic-catalog.html
@@ -1,6 +1,6 @@
 @@include('_layout_head.tpl', {
 	"title": "ЭA - Каталог",
-	"pageClass": "ea-site ea-catalog-page ea-has-catalog-menu"
+	"pageClass": "ea-site ea-has-catalog-menu"
 })
 
 <!--HEADER-->
