--- a/src/automatic-catalog.html
+++ b/src/automatic-catalog.html
@@ -36,7 +36,7 @@
 	<script src="js/modernizr.min.js"></script>
 </head>
 
-<body class="ea-site ea-catalog-page ea-has-catalog-menu">
+<body class="ea-site ea-has-catalog-menu">
 	<!--[if lt IE 9]> <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p> <![endif]-->
 	<!-- >>> head.tpl END <<< -->
 	<!--HEADER-->
@@ -138,7 +138,7 @@
 								<!--nav item end-->
 								<!--nav item start-->
 								<li class="">
-									<a href="#"><span>Сотрудничество</span></a>
+									<a href="automatic-card.html"><span>Сотрудничество</span></a>
 								</li>
 								<!--nav item end-->
 								<!--nav item start-->
