--- a/src/typography.html
+++ b/src/typography.html
@@ -139,7 +139,7 @@
 								<!--nav item end-->
 								<!--nav item start-->
 								<li class="">
-									<a href="#"><span>Сотрудничество</span></a>
+									<a href="automatic-card.html"><span>Сотрудничество</span></a>
 								</li>
 								<!--nav item end-->
 								<!--nav item start-->
