--- a/src/automatic-products.html
+++ b/src/automatic-products.html
@@ -484,13 +484,13 @@
 											<article class="products__item">
 												<div class="products__inner">
 													<div class="products__body">
-														<a href="products-card.html" class="products__figure">
+														<a href="automatic-card.html" class="products__figure">
 															<div class="products__img">
 																<img src="img/img-products-01.jpg" alt="Резьбовой крепежный элемент РКв-20 (внутренняя резьба) ТДМ" />
 															</div>
 														</a>
 														<div class="products__content">
-															<div class="products__title"><a href="products-card.html">Резьбовой крепежный элемент РКв-20 (внутренняя резьба) ТДМ</a></div>
+															<div class="products__title"><a href="automatic-card.html">Резьбовой крепежный элемент РКв-20 (внутренняя резьба) ТДМ</a></div>
 															<div class="products__stock">более 50 шт</div>
 														</div>
 													</div>
@@ -516,13 +516,13 @@
 											<article class="products__item">
 												<div class="products__inner">
 													<div class="products__body">
-														<a href="products-card.html" class="products__figure">
+														<a href="automatic-card.html" class="products__figure">
 															<div class="products__img">
 																<img src="img/img-products-02.jpg" alt="Кабель внутренний SAS(SFF-8087)-4хSATA (угловой) 0,5 м( Mini-SASх4-4хSATA)" />
 															</div>
 														</a>
 														<div class="products__content">
-															<div class="products__title"><a href="products-card.html">Кабель внутренний SAS(SFF-8087)-4хSATA (угловой) 0,5 м( Mini-SASх4-4хSATA)</a></div>
+															<div class="products__title"><a href="automatic-card.html">Кабель внутренний SAS(SFF-8087)-4хSATA (угловой) 0,5 м( Mini-SASх4-4хSATA)</a></div>
 															<div class="products__stock">нет на складе</div>
 														</div>
 													</div>
@@ -548,13 +548,13 @@
 											<article class="products__item">
 												<div class="products__inner">
 													<div class="products__body">
-														<a href="products-card.html" class="products__figure">
+														<a href="automatic-card.html" class="products__figure">
 															<div class="products__img">
 																<img src="img/img-products-03.jpg" alt="АВВГ 4Х50" />
 															</div>
 														</a>
 														<div class="products__content">
-															<div class="products__title"><a href="products-card.html">АВВГ 4Х50</a></div>
+															<div class="products__title"><a href="automatic-card.html">АВВГ 4Х50</a></div>
 															<div class="products__stock">нет на складе</div>
 														</div>
 													</div>
@@ -580,13 +580,13 @@
 											<article class="products__item">
 												<div class="products__inner">
 													<div class="products__body">
-														<a href="products-card.html" class="products__figure">
+														<a href="automatic-card.html" class="products__figure">
 															<div class="products__img">
 																<img src="img/img-products-04.jpg" alt="АВВГ 2х10" />
 															</div>
 														</a>
 														<div class="products__content">
-															<div class="products__title"><a href="products-card.html">АВВГ 2х10</a></div>
+															<div class="products__title"><a href="automatic-card.html">АВВГ 2х10</a></div>
 															<div class="products__stock">более 50 шт</div>
 														</div>
 													</div>
@@ -612,13 +612,13 @@
 											<article class="products__item">
 												<div class="products__inner">
 													<div class="products__body">
-														<a href="products-card.html" class="products__figure">
+														<a href="automatic-card.html" class="products__figure">
 															<div class="products__img">
 																<img src="img/img-products-05.jpg" alt="Резьбовой крепежный элемент РКв-20 (внутренняя резьба) ТДМ" />
 															</div>
 														</a>
 														<div class="products__content">
-															<div class="products__title"><a href="products-card.html">Резьбовой крепежный элемент РКв-20 (внутренняя резьба) ТДМ</a></div>
+															<div class="products__title"><a href="automatic-card.html">Резьбовой крепежный элемент РКв-20 (внутренняя резьба) ТДМ</a></div>
 															<div class="products__stock">нет на складе</div>
 														</div>
 													</div>
@@ -645,13 +645,13 @@
 											<article class="products__item in-cart">
 												<div class="products__inner">
 													<div class="products__body">
-														<a href="products-card.html" class="products__figure">
+														<a href="automatic-card.html" class="products__figure">
 															<div class="products__img">
 																<img src="img/img-products-06.jpg" alt="АВВГ 2х10" />
 															</div>
 														</a>
 														<div class="products__content">
-															<div class="products__title"><a href="products-card.html">АВВГ 2х10</a></div>
+															<div class="products__title"><a href="automatic-card.html">АВВГ 2х10</a></div>
 															<div class="products__stock">более 50 шт</div>
 														</div>
 													</div>
@@ -678,13 +678,13 @@
 											<article class="products__item">
 												<div class="products__inner">
 													<div class="products__body">
-														<a href="products-card.html" class="products__figure">
+														<a href="automatic-card.html" class="products__figure">
 															<div class="products__img">
 																<img src="img/img-products-07.jpg" alt="АВВГ 2х10" />
 															</div>
 														</a>
 														<div class="products__content">
-															<div class="products__title"><a href="products-card.html">АВВГ 2х10</a></div>
+															<div class="products__title"><a href="automatic-card.html">АВВГ 2х10</a></div>
 															<div class="products__stock">более 50 шт</div>
 														</div>
 													</div>
@@ -710,13 +710,13 @@
 											<article class="products__item">
 												<div class="products__inner">
 													<div class="products__body">
-														<a href="products-card.html" class="products__figure">
+														<a href="automatic-card.html" class="products__figure">
 															<div class="products__img">
 																<img src="img/img-products-08.jpg" alt="АВВГ 2х10" />
 															</div>
 														</a>
 														<div class="products__content">
-															<div class="products__title"><a href="products-card.html">АВВГ 2х10</a></div>
+															<div class="products__title"><a href="automatic-card.html">АВВГ 2х10</a></div>
 															<div class="products__stock">нет на складе</div>
 														</div>
 													</div>
@@ -743,13 +743,13 @@
 											<article class="products__item">
 												<div class="products__inner">
 													<div class="products__body">
-														<a href="products-card.html" class="products__figure">
+														<a href="automatic-card.html" class="products__figure">
 															<div class="products__img">
 																<img src="img/img-products-09.jpg" alt="АВВГ 2х10" />
 															</div>
 														</a>
 														<div class="products__content">
-															<div class="products__title"><a href="products-card.html">АВВГ 2х10</a></div>
+															<div class="products__title"><a href="automatic-card.html">АВВГ 2х10</a></div>
 															<div class="products__stock">более 100 шт</div>
 														</div>
 													</div>
