--- a/src/automatic-card.html
+++ b/src/automatic-card.html
@@ -331,97 +331,121 @@
 												</a>
 											</div>
 											<div class="p-card-overview__panels js-tab-container">
+												<a href="#p-card-overview-01" class="p-card-overview__tab js-tab-link">
+													<span>Основные параметры предназначен для соединения изолированного</span>
+													<i>&nbsp;</i>
+												</a>
 												<div class="p-card-overview__panel js-tab-content" id="p-card-overview-01">
-													<div class="table-auto">
-														<table class="tbl">
-															<thead>
-																<tr>
-																	<th>Наименование параметра</th>
-																	<th>Единица измерения</th>
-																	<th>Значение</th>
-																</tr>
-															</thead>
-															<tbody>
-																<tr>
-																	<td>Номинальное напряжение на стороне ВН</td>
-																	<td>кВ</td>
-																	<td>6;10</td>
-																</tr>
-																<tr>
-																	<td>Наибольшее напряжение на стороне ВН</td>
-																	<td>кА/с</td>
-																	<td>25;40;63;100</td>
-																</tr>
-																<tr>
-																	<td>Мощность силового трансформатора</td>
-																	<td>кВ</td>
-																	<td>6;10</td>
-																</tr>
-																<tr>
-																	<td>Номинальный ток на стороне ВН для присоединения линий</td>
-																	<td>кА/с</td>
-																	<td>25;40;63;100</td>
-																</tr>
-																<tr>
-																	<td>Номинальное напряжение на стороне ВН</td>
-																	<td>кА/с</td>
-																	<td>25;40;63;100</td>
-																</tr>
-																<tr>
-																	<td>Номинальное напряжение на стороне ВН</td>
-																	<td>кВ</td>
-																	<td>6;10</td>
-																</tr>
-																<tr>
-																	<td>Используемые аппараты: РВ; ВН; вакуумные выключатели VF, Evolis, Sion, BB/TEL и т.д.; рубильники РБ, РЕ, ВР и т.д.; выключатели ВА, Siemens, Schneider Electric, АВВ и другие</td>
-																	<td>кА/с</td>
-																	<td>25;40;63;100</td>
-																</tr>
-																<tr>
-																	<td>Наибольшее напряжение на стороне ВН</td>
-																	<td>кА/с</td>
-																	<td>25;40;63;100</td>
-																</tr>
-																<tr>
-																	<td>Мощность силового трансформатора</td>
-																	<td>кВ</td>
-																	<td>6;10</td>
-																</tr>
-																<tr>
-																	<td>Номинальный ток на стороне ВН для присоединения линий</td>
-																	<td>кА/с</td>
-																	<td>25;40;63;100</td>
-																</tr>
-															</tbody>
-														</table>
+													<div class="p-card-overview__frame">
+														<div class="table-auto">
+															<table class="tbl tbl-resp p-card-overview-tbl">
+																<thead>
+																	<tr class="tbl-resp--head">
+																		<th class="tbl-resp--hide">Наименование параметра</th>
+																		<th class="tbl-resp--grid-col-6 tbl-resp--title">Единица измерения</th>
+																		<th class="tbl-resp--grid-col-6 tbl-resp--title">Значение</th>
+																	</tr>
+																</thead>
+																<tbody>
+																	<tr>
+																		<td class="tbl-resp--subtitle">Номинальное напряжение на стороне ВН</td>
+																		<td class="tbl-resp--grid-col-6">кВ</td>
+																		<td class="tbl-resp--grid-col-6">6;10</td>
+																	</tr>
+																	<tr>
+																		<td class="tbl-resp--subtitle">Наибольшее напряжение на стороне ВН</td>
+																		<td class="tbl-resp--grid-col-6">кА/с</td>
+																		<td class="tbl-resp--grid-col-6">25;40;63;100</td>
+																	</tr>
+																	<tr>
+																		<td class="tbl-resp--subtitle">Мощность силового трансформатора</td>
+																		<td class="tbl-resp--grid-col-6">кВ</td>
+																		<td class="tbl-resp--grid-col-6">6;10</td>
+																	</tr>
+																	<tr>
+																		<td class="tbl-resp--subtitle">Номинальный ток на стороне ВН для присоединения линий</td>
+																		<td class="tbl-resp--grid-col-6">кА/с</td>
+																		<td class="tbl-resp--grid-col-6">25;40;63;100</td>
+																	</tr>
+																	<tr>
+																		<td class="tbl-resp--subtitle">Номинальное напряжение на стороне ВН</td>
+																		<td class="tbl-resp--grid-col-6">кА/с</td>
+																		<td class="tbl-resp--grid-col-6">25;40;63;100</td>
+																	</tr>
+																	<tr>
+																		<td class="tbl-resp--subtitle">Номинальное напряжение на стороне ВН</td>
+																		<td class="tbl-resp--grid-col-6">кВ</td>
+																		<td class="tbl-resp--grid-col-6">6;10</td>
+																	</tr>
+																	<tr>
+																		<td class="tbl-resp--subtitle">Используемые аппараты: РВ; ВН; вакуумные выключатели VF, Evolis, Sion, BB/TEL и т.д.; рубильники РБ, РЕ, ВР и т.д.; выключатели ВА, Siemens, Schneider Electric, АВВ и другие</td>
+																		<td class="tbl-resp--grid-col-6">кА/с</td>
+																		<td class="tbl-resp--grid-col-6">25;40;63;100</td>
+																	</tr>
+																	<tr>
+																		<td class="tbl-resp--subtitle">Наибольшее напряжение на стороне ВН</td>
+																		<td class="tbl-resp--grid-col-6">кА/с</td>
+																		<td class="tbl-resp--grid-col-6">25;40;63;100</td>
+																	</tr>
+																	<tr>
+																		<td class="tbl-resp--subtitle">Мощность силового трансформатора</td>
+																		<td class="tbl-resp--grid-col-6">кВ</td>
+																		<td class="tbl-resp--grid-col-6">6;10</td>
+																	</tr>
+																	<tr>
+																		<td class="tbl-resp--subtitle">Номинальный ток на стороне ВН для присоединения линий</td>
+																		<td class="tbl-resp--grid-col-6">кА/с</td>
+																		<td class="tbl-resp--grid-col-6">25;40;63;100</td>
+																	</tr>
+																</tbody>
+															</table>
+														</div>
 													</div>
 												</div>
+												<a href="#p-card-overview-02" class="p-card-overview__tab js-tab-link">
+													<span>Описание</span>
+													<i>&nbsp;</i>
+												</a>
 												<div class="p-card-overview__panel js-tab-content" id="p-card-overview-02">
-													<h3>Применение:</h3>
-													<p>Резьбовой крепежный элемент РКн (наружная резьба) предназначен для соединения изолированного металлорукава с установочной коробкой и герметичного соединение изолированного отрезков металлорукава путем стыковки с ответным элементом РКв (внутренняя
-														резьба).</p>
-													<p>Крепежный элемент РКнХ (наружная резьба и хомут) предназначен для соединение неизолированного металлорукава с установочной коробкой и соединение отрезков неизолированного и изолированного металлорукава путем стыковки с ответным элементом
-														РКв</p>
-													<h3>Материалы:</h3>
-													<p>Цинковый сплав</p>
-													<h3>Преимущества:</h3>
-													<ul>
-														<li>Простота монтажа</li>
-														<li>Надежное соединение отрезков металлорукава</li>
-														<li>Дополнительное уплотнение ввода в распределительный щит или установочную коробку</li>
-														<li>Герметичное соединения при стыковке изолированного металлорукава с использованием муфт Ркв и РКн (Степень защиты IP 54)</li>
-														<li>Индивидуальная упаковка со штрих-кодом для удобства реализации через розничные сети</li>
-													</ul>
+													<div class="p-card-overview__frame">
+														<h3>Применение:</h3>
+														<p>Резьбовой крепежный элемент РКн (наружная резьба) предназначен для соединения изолированного металлорукава с установочной коробкой и герметичного соединение изолированного отрезков металлорукава путем стыковки с ответным элементом РКв (внутренняя
+															резьба).</p>
+														<p>Крепежный элемент РКнХ (наружная резьба и хомут) предназначен для соединение неизолированного металлорукава с установочной коробкой и соединение отрезков неизолированного и изолированного металлорукава путем стыковки с ответным элементом
+															РКв</p>
+														<h3>Материалы:</h3>
+														<p>Цинковый сплав</p>
+														<h3>Преимущества:</h3>
+														<ul>
+															<li>Простота монтажа</li>
+															<li>Надежное соединение отрезков металлорукава</li>
+															<li>Дополнительное уплотнение ввода в распределительный щит или установочную коробку</li>
+															<li>Герметичное соединения при стыковке изолированного металлорукава с использованием муфт Ркв и РКн (Степень защиты IP 54)</li>
+															<li>Индивидуальная упаковка со штрих-кодом для удобства реализации через розничные сети</li>
+														</ul>
+													</div>
 												</div>
+												<a href="#p-card-overview-03" class="p-card-overview__tab js-tab-link">
+													<span>Аналоги</span>
+													<i>&nbsp;</i>
+												</a>
 												<div class="p-card-overview__panel js-tab-content" id="p-card-overview-03">
-													<h3>Надежное соединение отрезков металлорукава</h3>
-													<p>Крепежный элемент РКнХ (наружная резьба и хомут) предназначен для соединение неизолированного металлорукава с установочной коробкой и соединение отрезков неизолированного и изолированного металлорукава путем стыковки с ответным элементом
-														РКв</p>
+													<div class="p-card-overview__frame">
+														<h3>Надежное соединение отрезков металлорукава</h3>
+														<p>Крепежный элемент РКнХ (наружная резьба и хомут) предназначен для соединение неизолированного металлорукава с установочной коробкой и соединение отрезков неизолированного и изолированного металлорукава путем стыковки с ответным элементом
+															РКв</p>
+													</div>
 												</div>
+												<a href="#p-card-overview-04" class="p-card-overview__tab js-tab-link">
+													<span>Схожие товары</span>
+													<i>&nbsp;</i>
+												</a>
 												<div class="p-card-overview__panel js-tab-content" id="p-card-overview-04">
-													<h3>Преимущества</h3>
-													<p>Резьбовой крепежный элемент РКн (наружная резьба) предназначен для соединения изолированного металлорукава с установочной коробкой и герметичного соединение изолированного отрезков металлорукава путем стыковки с ответным элементом РКв (внутренняя
-														резьба).</p>
+													<div class="p-card-overview__frame">
+														<h3>Преимущества</h3>
+														<p>Резьбовой крепежный элемент РКн (наружная резьба) предназначен для соединения изолированного металлорукава с установочной коробкой и герметичного соединение изолированного отрезков металлорукава путем стыковки с ответным элементом РКв (внутренняя
+															резьба).</p>
+													</div>
 												</div>
 											</div>
 										</div>
