--- a/src/__automatic-news.html
+++ b/src/__automatic-news.html
@@ -26,23 +26,14 @@
 							@@include('_breadcrumbs.tpl')
 							<!--breadcrumbs end-->
 							<h1>2Кабель силовой бронированный АВБбШв и ААБл</h1>
-							<!--filters-->
-							@@include('_tpl_products-filters.xhtml')
-							<!--filters end-->
-							<!--options panel-->
-							@@include('_tpl_products-options.xhtml')
-							<!--options panel end-->
 							<div class="layout-wide">
-								<!--products-->
+								<!--news-->
 								<div class="products view-container-js">
 									<section class="products__list">
 										@@loop("_products-items.tpl", "includes-json/products-items.json")
 									</section>
 								</div>
-								<!--products end-->
-								<!--pagination-->
-								@@include('_tpl_pagination-2.xhtml')
-								<!--pagination end-->
+								<!--news end-->
 							</div>
 						</div>
 					</div>
