--- a/src/automatic-products.html
+++ b/src/automatic-products.html
@@ -37,7 +37,7 @@
 </head>
 
 <body class="ea-site ea-has-catalog-menu">
-	<!--[if lt IE 9]> <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p> <![endif]-->
+	<!--[if lt IE 9]> <div class="browserupgrade"><p>You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p></div> <![endif]-->
 	<!-- >>> head.tpl END <<< -->
 	<!--HEADER-->
 	<!--HEADER-->
@@ -776,6 +776,29 @@
 										</section>
 									</div>
 									<!--products end-->
+									<!--pagination-->
+									<div class="pagination">
+										<a class="prev" href="#">
+											<i class="prev-arr">
+			<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 582 998"> <path d="M582,83c0,8.7-3.3,16.3-10,23L179,499l393,393c6.7,6.7,10,14.3,10,23s-3.3,16.3-10,23l-50,50c-6.7,6.7-14.3,10-23,10  s-16.3-3.3-23-10L10,522c-6.7-6.7-10-14.3-10-23s3.3-16.3,10-23L476,10c6.7-6.7,14.3-10,23-10s16.3,3.3,23,10l50,50  C578.7,66.7,582,74.3,582,83z"></path> </svg>
+		</i>
+										</a>
+										<ul>
+											<li><a href="#">1</a></li>
+											<li><span class="dots">...</span></li>
+											<li><a href="#">8</a></li>
+											<li class="active"><a href="">9</a></li>
+											<li><a href="#">10</a></li>
+											<li><span class="dots">...</span></li>
+											<li><a href="#">127</a></li>
+										</ul>
+										<a class="next" href="#">
+											<i class="next-arr">
+			<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 582 998"> <path d="M582,499c0,8.7-3.3,16.3-10,23L106,988c-6.7,6.7-14.3,10-23,10s-16.3-3.3-23-10l-50-50c-6.7-6.7-10-14.3-10-23  s3.3-16.3,10-23l393-393L10,106C3.3,99.3,0,91.7,0,83s3.3-16.3,10-23l50-50C66.7,3.3,74.3,0,83,0s16.3,3.3,23,10l466,466  C578.7,482.7,582,490.3,582,499z"></path> </svg>
+		</i>
+										</a>
+									</div>
+									<!--pagination end-->
 								</div>
 							</div>
 						</div>
