--- a/src/map-site.html
+++ b/src/map-site.html
@@ -37,7 +37,7 @@
 </head>
 
 <body class="ea-site ea-catalog-page ea-has-catalog-menu">
-	<!--[if lt IE 9]> <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p> <![endif]-->
+	<!--[if lt IE 9]> <div class="browserupgrade"><p>You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p></div> <![endif]-->
 	<!-- >>> head.tpl END <<< -->
 	<!--HEADER-->
 	<!--HEADER-->
