--- a/src/map-site.html
+++ b/src/map-site.html
@@ -143,7 +143,7 @@
 								<!--nav item end-->
 								<!--nav item start-->
 								<li class="current">
-									<a href="#"><span>Заказ</span></a>
+									<a href="automatic-news.html"><span>Заказ</span></a>
 								</li>
 								<!--nav item end-->
 								<!--nav item start-->
