--- a/src/automatic-card.html
+++ b/src/automatic-card.html
@@ -144,7 +144,7 @@
 									<!--nav item end-->
 									<!--nav item start-->
 									<li class="">
-										<a href="#"><span>Заказ</span></a>
+										<a href="automatic-news.html"><span>Заказ</span></a>
 									</li>
 									<!--nav item end-->
 									<!--nav item start-->
