--- a/src/__automatic-news.html
+++ b/src/__automatic-news.html
@@ -45,6 +45,7 @@
 									</section>
 								</div>
 								<!--news end-->
+								<a href="#" class="btn-more btn-with-icon"><i class="depict-cart">&nbsp;</i><span>Загрузить еще</span></a>
 							</div>
 						</div>
 					</div>
