--- a/src/automatic-catalog.html
+++ b/src/automatic-catalog.html
@@ -271,7 +271,7 @@
 									<div class="catalog grid-view-activated">
 										<section class="catalog__list">
 											<article class="catalog__item">
-												<div class="catalog__inner">
+												<div class="catalog__inner show-container-js">
 													<div class="catalog__figure">
 														<div class="catalog__img">
 															<img src="img/img-catalog-01.jpg" alt="Кабель и провод медный" />
@@ -280,7 +280,7 @@
 													<div class="catalog__content">
 														<div class="catalog__title">Кабель и провод медный</div>
 														<div class="catalog__text">
-															<ul>
+															<ul class="show-list-js" data-show-item="5" data-min-hide-item="2">
 																<li><a href="#"><span>Кабель силовой ВВГ, ВВГнг, ВВГнгLS, ВВГнгFRLS</span></a>
 																	<ul>
 																		<li><a href="#"><span>Кабель силовой ВВГ</span></a></li>
@@ -296,14 +296,15 @@
 																<li><a href="#"><span>Провод бытовой ШВВП, ПУГНП</span></a></li>
 																<li><a href="#"><span>Провод установочный ПВ-1, ПВ-3</span></a></li>
 																<li><a href="#"><span>Провод термостойкий РКГМ</span></a></li>
-																<li><a href="#"><span>Провод без изоляции МГ</span></a></li>
+																<li><a href="#" class="hidden-item" style="display: none"><span>Провод без изоляции МГ</span></a></li>
 															</ul>
 														</div>
 													</div>
+													<a href="#" class="catalog__btn-show btn-show-js" data-text="Ещё" data-hide="Свернуть" style="display: none;">&nbsp;</a>
 												</div>
 											</article>
 											<article class="catalog__item">
-												<div class="catalog__inner">
+												<div class="catalog__inner show-container-js">
 													<div class="catalog__figure">
 														<div class="catalog__img">
 															<img src="img/img-catalog-02.jpg" alt="Кабель, провод алюминмиевый и СИП-арматура" />
@@ -312,7 +313,7 @@
 													<div class="catalog__content">
 														<div class="catalog__title">Кабель, провод алюминмиевый и СИП-арматура</div>
 														<div class="catalog__text">
-															<ul>
+															<ul class="show-list-js" data-show-item="5" data-min-hide-item="2">
 																<li><a href="#"><span>Кабель силовой АВВГ</span></a></li>
 																<li><a href="#"><span>2Кабель силовой бронированный АВБбШв и ААБл</span></a></li>
 																<li><a href="#"><span>Провод установочный АПВ, АППВ</span></a></li>
@@ -331,10 +332,11 @@
 															</ul>
 														</div>
 													</div>
+													<a href="#" class="catalog__btn-show btn-show-js" data-text="Ещё" data-hide="Свернуть" style="display: none;">&nbsp;</a>
 												</div>
 											</article>
 											<article class="catalog__item">
-												<div class="catalog__inner">
+												<div class="catalog__inner show-container-js">
 													<div class="catalog__figure">
 														<div class="catalog__img">
 															<img src="img/__temp-img-content-carousel-01.jpg" alt="Кабель, провод терморегулирующий и комплектующие" />
@@ -343,17 +345,19 @@
 													<div class="catalog__content">
 														<div class="catalog__title">Кабель, провод терморегулирующий и комплектующие</div>
 														<div class="catalog__text">
-															<ul>
+															<ul class="show-list-js" data-show-item="5" data-min-hide-item="2">
 																<li><a href="#"><span>Кабель телефонный и комплектующие</span></a></li>
 																<li><a href="#"><span>Кабель телевизионный и комплектующие</span></a></li>
 																<li><a href="#"><span>Кабель связи и комплектующие</span></a></li>
 															</ul>
+															</ul>
 														</div>
 													</div>
+													<a href="#" class="catalog__btn-show btn-show-js" data-text="Ещё" data-hide="Свернуть" style="display: none;">&nbsp;</a>
 												</div>
 											</article>
 											<article class="catalog__item">
-												<div class="catalog__inner">
+												<div class="catalog__inner show-container-js">
 													<div class="catalog__figure">
 														<div class="catalog__img">
 															<img src="img/__temp-img-content-carousel-02.jpg" alt="Кабель связи и комплектующие" />
@@ -362,16 +366,17 @@
 													<div class="catalog__content">
 														<div class="catalog__title">Кабель связи и комплектующие</div>
 														<div class="catalog__text">
-															<ul>
+															<ul class="show-list-js" data-show-item="5" data-min-hide-item="2">
 																<li><a href="#"><span>Кабель самогреющий и комплектующие</span></a></li>
 																<li><a href="#"><span>Провод ПНСВ</span></a></li>
 															</ul>
 														</div>
 													</div>
+													<a href="#" class="catalog__btn-show btn-show-js" data-text="Ещё" data-hide="Свернуть" style="display: none;">&nbsp;</a>
 												</div>
 											</article>
 											<article class="catalog__item">
-												<div class="catalog__inner">
+												<div class="catalog__inner show-container-js">
 													<div class="catalog__figure">
 														<div class="catalog__img">
 															<img src="img/img-catalog-03.jpg" alt="Кабель контрольный и монтажный экранированный" />
@@ -380,16 +385,17 @@
 													<div class="catalog__content">
 														<div class="catalog__title">Кабель контрольный и монтажный экранированный</div>
 														<div class="catalog__text">
-															<ul>
+															<ul class="show-list-js" data-show-item="5" data-min-hide-item="2">
 																<li><a href="#"><span>Кабель контрольный КВВГ, КВВГнг, КВВГнгLS</span></a></li>
 																<li><a href="#"><span>Кабель монтажный экранированный МКЭШ</span></a></li>
 															</ul>
 														</div>
 													</div>
+													<a href="#" class="catalog__btn-show btn-show-js" data-text="Ещё" data-hide="Свернуть" style="display: none;">&nbsp;</a>
 												</div>
 											</article>
 											<article class="catalog__item">
-												<div class="catalog__inner">
+												<div class="catalog__inner show-container-js">
 													<div class="catalog__figure">
 														<div class="catalog__img">
 															<img src="img/img-catalog-03.jpg" alt="Кабель-канал и  аксессуары" />
@@ -398,7 +404,7 @@
 													<div class="catalog__content">
 														<div class="catalog__title">Кабель-канал и аксессуары</div>
 														<div class="catalog__text">
-															<ul>
+															<ul class="show-list-js" data-show-item="5" data-min-hide-item="2">
 																<li><a href="#"><span>Кабель-канал (Россия)</span></a></li>
 																<li><a href="#"><span>Кабель-канал Legrand</span></a></li>
 																<li><a href="#"><span>Аксессуары к кабель-каналу (Россия)</span></a></li>
@@ -406,10 +412,11 @@
 															</ul>
 														</div>
 													</div>
+													<a href="#" class="catalog__btn-show btn-show-js" data-text="Ещё" data-hide="Свернуть" style="display: none;">&nbsp;</a>
 												</div>
 											</article>
 											<article class="catalog__item">
-												<div class="catalog__inner">
+												<div class="catalog__inner show-container-js">
 													<div class="catalog__figure">
 														<div class="catalog__img">
 															<img src="img/img-catalog-01.jpg" alt="Трубы ПВХ, ПНД, металлорукав" />
@@ -418,7 +425,7 @@
 													<div class="catalog__content">
 														<div class="catalog__title">Трубы ПВХ, ПНД, металлорукав</div>
 														<div class="catalog__text">
-															<ul>
+															<ul class="show-list-js" data-show-item="5" data-min-hide-item="2">
 																<li><a href="#"><span>Трубы гладкие жесткие ПВХ</span></a></li>
 																<li><a href="#"><span>Трубы гофрированные ПВХ</span></a></li>
 																<li><a href="#"><span>Трубы двустенные гофрированные ПНД</span></a></li>
@@ -429,10 +436,11 @@
 															</ul>
 														</div>
 													</div>
+													<a href="#" class="catalog__btn-show btn-show-js" data-text="Ещё" data-hide="Свернуть" style="display: none;">&nbsp;</a>
 												</div>
 											</article>
 											<article class="catalog__item">
-												<div class="catalog__inner">
+												<div class="catalog__inner show-container-js">
 													<div class="catalog__figure">
 														<div class="catalog__img">
 															<img src="img/img-catalog-02.jpg" alt="Лоток металлический" />
@@ -441,16 +449,17 @@
 													<div class="catalog__content">
 														<div class="catalog__title">Лоток металлический</div>
 														<div class="catalog__text">
-															<ul>
+															<ul class="show-list-js" data-show-item="5" data-min-hide-item="2">
 																<li><a href="#"><span>Лоток металлический</span></a></li>
 																<li><a href="#"><span>Комплектующие к лотку металлическому</span></a></li>
 															</ul>
 														</div>
 													</div>
+													<a href="#" class="catalog__btn-show btn-show-js" data-text="Ещё" data-hide="Свернуть" style="display: none;">&nbsp;</a>
 												</div>
 											</article>
 											<article class="catalog__item">
-												<div class="catalog__inner">
+												<div class="catalog__inner show-container-js">
 													<div class="catalog__figure">
 														<div class="catalog__img">
 															<img src="img/img-catalog-02.jpg" alt="Муфты термоусаживаемые кабельные" />
@@ -459,12 +468,13 @@
 													<div class="catalog__content">
 														<div class="catalog__title">Муфты термоусаживаемые кабельные</div>
 														<div class="catalog__text">
-															<ul>
+															<ul class="show-list-js" data-show-item="5" data-min-hide-item="2">
 																<li><a href="#"><span>Концевые</span></a></li>
 																<li><a href="#"><span>Соединительные</span></a></li>
 															</ul>
 														</div>
 													</div>
+													<a href="#" class="catalog__btn-show btn-show-js" data-text="Ещё" data-hide="Свернуть" style="display: none;">&nbsp;</a>
 												</div>
 											</article>
 										</section>
