--- a/src/automatic-news.html
+++ b/src/automatic-news.html
@@ -403,6 +403,7 @@
 										</section>
 									</div>
 									<!--news end-->
+									<a href="#" class="btn-more btn-with-icon"><i class="depict-cart">&nbsp;</i><span>Загрузить еще</span></a>
 								</div>
 							</div>
 						</div>
