--- a/src/automatic-products.html
+++ b/src/automatic-products.html
@@ -267,14 +267,55 @@
 								<!--breadcrumbs end-->
 								<h1>2Кабель силовой бронированный АВБбШв и ААБл</h1>
 								<!--filters-->
-								<div class="p-filters">
+								<div class="p-filters p-filters-js">
 									<div class="p-filters__list">
 										<div class="p-filters__item">
 											<div class="p-filters__inner">
 												<div class="p-filters-select">
 													<div class="p-filters-select-head">
-														<div class="p-filters__group">Производитель</div>
+														<div class="p-filters__title">Производитель</div>
 														<div class="p-filters__placeholder">Выбрать производителя</div>
+														<div class="p-filters__value">патроны, светильники, лампочки, горелки, лампы дневного света, светодиоды</div>
+													</div>
+													<div class="p-filters-angle"><i>&nbsp;</i></div>
+													<div class="p-filters-select-drop">
+														<ul class="p-filters-select-list">
+															<li>
+																<label class="check-label">
+				<input type="checkbox" name="checkbox-normal" />
+				<span><i>&nbsp;</i>Отличный способ для выделения самого важного в тексте – использование контрастных шрифтов</span>
+			</label>
+															</li>
+															<li>
+																<label class="check-label">
+				<input type="checkbox" name="checkbox-checked" checked />
+				<span><i>&nbsp;</i>@@list[text]</span>
+			</label>
+															</li>
+															<li>
+																<label class="check-label">
+				<input type="checkbox" name="checkbox-disabled" disabled />
+				<span><i>&nbsp;</i>Disabled</span>
+			</label>
+															</li>
+															<li>
+																<label class="check-label">
+				<input type="checkbox" name="checkbox-checked-disabled" checked disabled />
+				<span><i>&nbsp;</i>Checked & Disabled</span>
+			</label>
+															</li>
+														</ul>
+													</div>
+												</div>
+											</div>
+										</div>
+										<div class="p-filters__item">
+											<div class="p-filters__inner">
+												<div class="p-filters-select p-filters-group-js">
+													<div class="p-filters-select-head">
+														<div class="p-filters__title">Стоимотсь</div>
+														<div class="p-filters__placeholder">Выбрать стоимотсь</div>
+														<div class="p-filters__value">80 р. — 150 р.</div>
 													</div>
 													<div class="p-filters-angle"><i>&nbsp;</i></div>
 													<div class="p-filters-select-menu">
@@ -312,47 +353,9 @@
 											<div class="p-filters__inner">
 												<div class="p-filters-select">
 													<div class="p-filters-select-head">
-														<div class="p-filters__group">Стоимотсь</div>
-														<div class="p-filters__placeholder">80 р. — 150 р.</div>
-													</div>
-													<div class="p-filters-angle"><i>&nbsp;</i></div>
-													<div class="p-filters-select-menu">
-														<ul class="p-filters-select-menu__list">
-															<li>
-																<label class="check-label">
-									<input type="checkbox" name="checkbox-normal" />
-									<span><i>&nbsp;</i>Отличный способ для выделения самого важного в тексте – использование контрастных шрифтов</span>
-								</label>
-															</li>
-															<li>
-																<label class="check-label">
-									<input type="checkbox" name="checkbox-checked" checked />
-									<span><i>&nbsp;</i>Checked</span>
-								</label>
-															</li>
-															<li>
-																<label class="check-label">
-									<input type="checkbox" name="checkbox-disabled" disabled />
-									<span><i>&nbsp;</i>Disabled</span>
-								</label>
-															</li>
-															<li>
-																<label class="check-label">
-									<input type="checkbox" name="checkbox-checked-disabled" checked disabled />
-									<span><i>&nbsp;</i>Checked & Disabled</span>
-								</label>
-															</li>
-														</ul>
-													</div>
-												</div>
-											</div>
-										</div>
-										<div class="p-filters__item">
-											<div class="p-filters__inner">
-												<div class="p-filters-select">
-													<div class="p-filters-select-head">
-														<div class="p-filters__group">Производитель</div>
+														<div class="p-filters__title">Производитель</div>
 														<div class="p-filters__placeholder">Выбрать производителя</div>
+														<div class="p-filters__value">патроны, светильники, лампочки, горелки, лампы дневного света, светодиоды</div>
 													</div>
 													<div class="p-filters-angle"><i>&nbsp;</i></div>
 													<div class="p-filters-select-menu">
@@ -390,8 +393,9 @@
 											<div class="p-filters__inner">
 												<div class="p-filters-select">
 													<div class="p-filters-select-head">
-														<div class="p-filters__group">Тип</div>
-														<div class="p-filters__placeholder">патроны. светильники, лампочки, горелки, лампы дневного света, светодиоды</div>
+														<div class="p-filters__title">Тип</div>
+														<div class="p-filters__placeholder">Выбрать тип</div>
+														<div class="p-filters__value">патроны, светильники, лампочки, горелки, лампы дневного света, светодиоды</div>
 													</div>
 													<div class="p-filters-angle"><i>&nbsp;</i></div>
 													<div class="p-filters-select-menu">
@@ -500,9 +504,7 @@
 														</div>
 														<div class="products__options">
 															<a href="#" class="btn-outline btn-with-icon">
-																<i>
-						<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 501.1 409.5" enable-background="new 0 0 501.1 409.5"> <path d="M173.5,350.1c-3.7,0-7.4,0.9-10.9,2.6c-11.4,4-19.6,14.8-19.6,27.6c0,16.1,13.1,29.2,29.2,29.2c9.2,0,17.3-4.2,22.7-10.8  c4.7-5.3,7.8-11.9,7.9-18.6C203.1,365.4,188.2,350.2,173.5,350.1z M447.1,248l54.1-153H120V0H0v20h100v304h310v-20H120v-56H447.1z   M120,115h352.9l-39.9,113H120V115z M353.8,350.1c-4.6,0-9.2,1.4-13.4,3.9c-9.7,4.7-16.4,14.7-16.4,26.3c0,16.1,13.1,29.2,29.2,29.2  c12.7,0,23.5-8.1,27.5-19.4c1.4-3.2,2.2-6.6,2.2-10.1C383.1,365.2,368.6,350.2,353.8,350.1z"></path> </svg>
-					</i>
+																<i class="depict-cart">&nbsp;</i>
 																<span>В корзину</span>
 															</a>
 															<div class="spinner has-remove">
@@ -532,9 +534,7 @@
 														</div>
 														<div class="products__options">
 															<a href="#" class="btn-outline btn-with-icon">
-																<i>
-						<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 501.1 409.5" enable-background="new 0 0 501.1 409.5"> <path d="M173.5,350.1c-3.7,0-7.4,0.9-10.9,2.6c-11.4,4-19.6,14.8-19.6,27.6c0,16.1,13.1,29.2,29.2,29.2c9.2,0,17.3-4.2,22.7-10.8  c4.7-5.3,7.8-11.9,7.9-18.6C203.1,365.4,188.2,350.2,173.5,350.1z M447.1,248l54.1-153H120V0H0v20h100v304h310v-20H120v-56H447.1z   M120,115h352.9l-39.9,113H120V115z M353.8,350.1c-4.6,0-9.2,1.4-13.4,3.9c-9.7,4.7-16.4,14.7-16.4,26.3c0,16.1,13.1,29.2,29.2,29.2  c12.7,0,23.5-8.1,27.5-19.4c1.4-3.2,2.2-6.6,2.2-10.1C383.1,365.2,368.6,350.2,353.8,350.1z"></path> </svg>
-					</i>
+																<i class="depict-cart">&nbsp;</i>
 																<span>В корзину</span>
 															</a>
 															<div class="spinner has-remove">
@@ -564,9 +564,7 @@
 														</div>
 														<div class="products__options">
 															<a href="#" class="btn-outline btn-with-icon">
-																<i>
-						<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 501.1 409.5" enable-background="new 0 0 501.1 409.5"> <path d="M173.5,350.1c-3.7,0-7.4,0.9-10.9,2.6c-11.4,4-19.6,14.8-19.6,27.6c0,16.1,13.1,29.2,29.2,29.2c9.2,0,17.3-4.2,22.7-10.8  c4.7-5.3,7.8-11.9,7.9-18.6C203.1,365.4,188.2,350.2,173.5,350.1z M447.1,248l54.1-153H120V0H0v20h100v304h310v-20H120v-56H447.1z   M120,115h352.9l-39.9,113H120V115z M353.8,350.1c-4.6,0-9.2,1.4-13.4,3.9c-9.7,4.7-16.4,14.7-16.4,26.3c0,16.1,13.1,29.2,29.2,29.2  c12.7,0,23.5-8.1,27.5-19.4c1.4-3.2,2.2-6.6,2.2-10.1C383.1,365.2,368.6,350.2,353.8,350.1z"></path> </svg>
-					</i>
+																<i class="depict-cart">&nbsp;</i>
 																<span>В корзину</span>
 															</a>
 															<div class="spinner has-remove">
@@ -596,9 +594,7 @@
 														</div>
 														<div class="products__options">
 															<a href="#" class="btn-outline btn-with-icon">
-																<i>
-						<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 501.1 409.5" enable-background="new 0 0 501.1 409.5"> <path d="M173.5,350.1c-3.7,0-7.4,0.9-10.9,2.6c-11.4,4-19.6,14.8-19.6,27.6c0,16.1,13.1,29.2,29.2,29.2c9.2,0,17.3-4.2,22.7-10.8  c4.7-5.3,7.8-11.9,7.9-18.6C203.1,365.4,188.2,350.2,173.5,350.1z M447.1,248l54.1-153H120V0H0v20h100v304h310v-20H120v-56H447.1z   M120,115h352.9l-39.9,113H120V115z M353.8,350.1c-4.6,0-9.2,1.4-13.4,3.9c-9.7,4.7-16.4,14.7-16.4,26.3c0,16.1,13.1,29.2,29.2,29.2  c12.7,0,23.5-8.1,27.5-19.4c1.4-3.2,2.2-6.6,2.2-10.1C383.1,365.2,368.6,350.2,353.8,350.1z"></path> </svg>
-					</i>
+																<i class="depict-cart">&nbsp;</i>
 																<span>В корзину</span>
 															</a>
 															<div class="spinner has-remove">
@@ -629,9 +625,7 @@
 														</div>
 														<div class="products__options">
 															<a href="#" class="btn-outline btn-with-icon">
-																<i>
-						<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 501.1 409.5" enable-background="new 0 0 501.1 409.5"> <path d="M173.5,350.1c-3.7,0-7.4,0.9-10.9,2.6c-11.4,4-19.6,14.8-19.6,27.6c0,16.1,13.1,29.2,29.2,29.2c9.2,0,17.3-4.2,22.7-10.8  c4.7-5.3,7.8-11.9,7.9-18.6C203.1,365.4,188.2,350.2,173.5,350.1z M447.1,248l54.1-153H120V0H0v20h100v304h310v-20H120v-56H447.1z   M120,115h352.9l-39.9,113H120V115z M353.8,350.1c-4.6,0-9.2,1.4-13.4,3.9c-9.7,4.7-16.4,14.7-16.4,26.3c0,16.1,13.1,29.2,29.2,29.2  c12.7,0,23.5-8.1,27.5-19.4c1.4-3.2,2.2-6.6,2.2-10.1C383.1,365.2,368.6,350.2,353.8,350.1z"></path> </svg>
-					</i>
+																<i class="depict-cart">&nbsp;</i>
 																<span>В корзину</span>
 															</a>
 															<div class="spinner has-remove">
@@ -662,9 +656,7 @@
 														</div>
 														<div class="products__options">
 															<a href="#" class="btn-outline btn-with-icon">
-																<i>
-						<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 501.1 409.5" enable-background="new 0 0 501.1 409.5"> <path d="M173.5,350.1c-3.7,0-7.4,0.9-10.9,2.6c-11.4,4-19.6,14.8-19.6,27.6c0,16.1,13.1,29.2,29.2,29.2c9.2,0,17.3-4.2,22.7-10.8  c4.7-5.3,7.8-11.9,7.9-18.6C203.1,365.4,188.2,350.2,173.5,350.1z M447.1,248l54.1-153H120V0H0v20h100v304h310v-20H120v-56H447.1z   M120,115h352.9l-39.9,113H120V115z M353.8,350.1c-4.6,0-9.2,1.4-13.4,3.9c-9.7,4.7-16.4,14.7-16.4,26.3c0,16.1,13.1,29.2,29.2,29.2  c12.7,0,23.5-8.1,27.5-19.4c1.4-3.2,2.2-6.6,2.2-10.1C383.1,365.2,368.6,350.2,353.8,350.1z"></path> </svg>
-					</i>
+																<i class="depict-cart">&nbsp;</i>
 																<span>В корзину</span>
 															</a>
 															<div class="spinner has-remove">
@@ -694,9 +686,7 @@
 														</div>
 														<div class="products__options">
 															<a href="#" class="btn-outline btn-with-icon">
-																<i>
-						<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 501.1 409.5" enable-background="new 0 0 501.1 409.5"> <path d="M173.5,350.1c-3.7,0-7.4,0.9-10.9,2.6c-11.4,4-19.6,14.8-19.6,27.6c0,16.1,13.1,29.2,29.2,29.2c9.2,0,17.3-4.2,22.7-10.8  c4.7-5.3,7.8-11.9,7.9-18.6C203.1,365.4,188.2,350.2,173.5,350.1z M447.1,248l54.1-153H120V0H0v20h100v304h310v-20H120v-56H447.1z   M120,115h352.9l-39.9,113H120V115z M353.8,350.1c-4.6,0-9.2,1.4-13.4,3.9c-9.7,4.7-16.4,14.7-16.4,26.3c0,16.1,13.1,29.2,29.2,29.2  c12.7,0,23.5-8.1,27.5-19.4c1.4-3.2,2.2-6.6,2.2-10.1C383.1,365.2,368.6,350.2,353.8,350.1z"></path> </svg>
-					</i>
+																<i class="depict-cart">&nbsp;</i>
 																<span>В корзину</span>
 															</a>
 															<div class="spinner has-remove">
@@ -727,9 +717,7 @@
 														</div>
 														<div class="products__options">
 															<a href="#" class="btn-outline btn-with-icon">
-																<i>
-						<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 501.1 409.5" enable-background="new 0 0 501.1 409.5"> <path d="M173.5,350.1c-3.7,0-7.4,0.9-10.9,2.6c-11.4,4-19.6,14.8-19.6,27.6c0,16.1,13.1,29.2,29.2,29.2c9.2,0,17.3-4.2,22.7-10.8  c4.7-5.3,7.8-11.9,7.9-18.6C203.1,365.4,188.2,350.2,173.5,350.1z M447.1,248l54.1-153H120V0H0v20h100v304h310v-20H120v-56H447.1z   M120,115h352.9l-39.9,113H120V115z M353.8,350.1c-4.6,0-9.2,1.4-13.4,3.9c-9.7,4.7-16.4,14.7-16.4,26.3c0,16.1,13.1,29.2,29.2,29.2  c12.7,0,23.5-8.1,27.5-19.4c1.4-3.2,2.2-6.6,2.2-10.1C383.1,365.2,368.6,350.2,353.8,350.1z"></path> </svg>
-					</i>
+																<i class="depict-cart">&nbsp;</i>
 																<span>В корзину</span>
 															</a>
 															<div class="spinner has-remove">
@@ -760,9 +748,7 @@
 														</div>
 														<div class="products__options">
 															<a href="#" class="btn-outline btn-with-icon">
-																<i>
-						<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 501.1 409.5" enable-background="new 0 0 501.1 409.5"> <path d="M173.5,350.1c-3.7,0-7.4,0.9-10.9,2.6c-11.4,4-19.6,14.8-19.6,27.6c0,16.1,13.1,29.2,29.2,29.2c9.2,0,17.3-4.2,22.7-10.8  c4.7-5.3,7.8-11.9,7.9-18.6C203.1,365.4,188.2,350.2,173.5,350.1z M447.1,248l54.1-153H120V0H0v20h100v304h310v-20H120v-56H447.1z   M120,115h352.9l-39.9,113H120V115z M353.8,350.1c-4.6,0-9.2,1.4-13.4,3.9c-9.7,4.7-16.4,14.7-16.4,26.3c0,16.1,13.1,29.2,29.2,29.2  c12.7,0,23.5-8.1,27.5-19.4c1.4-3.2,2.2-6.6,2.2-10.1C383.1,365.2,368.6,350.2,353.8,350.1z"></path> </svg>
-					</i>
+																<i class="depict-cart">&nbsp;</i>
 																<span>В корзину</span>
 															</a>
 															<div class="spinner has-remove">
